# irodori-migration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  testing.md
examples/: basic_plan.rs  checksum_preview.rs  rollout_preview.rs
scripts/: verify.sh
src/: canonical.rs  checksum.rs  export.rs  lib.rs  plan.rs  recipe.rs  rollout.rs
src/io/: import.rs  mod.rs
tests/: container_sql.rs  live_sql.rs  migration_snapshots.rs
tests/snapshots/: migration_snapshots__mysql_keyed_diff.snap  migration_snapshots__postgres_chunk_checksum.snap  migration_snapshots__postgres_to_mysql_diff_sql.snap  migration_snapshots__postgres_to_mysql_source_sql.snap  migration_snapshots__postgres_to_mysql_target_sql.snap
