[package]
name = "irodori-migration"
version = "0.1.0"
edition = "2021"
license = "MIT OR 0BSD"
authors = ["Irodori Table contributors"]
description = "Database migration planning, schema diff, data verification, and tabular import/export primitives for Irodori."
repository = "https://github.com/hjosugi/irodori-migration"
readme = "README.md"
keywords = ["database", "migration", "schema", "diff", "export"]
categories = ["database"]
include = ["Cargo.toml", "LICENSE", "README.md", "docs/**/*.md", "src/**/*.rs"]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
arrow = { version = "59.0.0", optional = true }
parquet = { version = "59.0.0", optional = true }
apache-avro = { version = "0.21", optional = true }

[features]
default = []
parquet = ["dep:parquet", "dep:arrow"]
avro = ["dep:apache-avro"]
