[package]
name = "irodori-migration"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR 0BSD"
authors = ["Irodori Table contributors"]
description = "Database migration planning, schema diff, data verification, and tabular import/export primitives for Irodori."
repository = "https://github.com/hjosugi/irodori-migration"
homepage = "https://github.com/hjosugi/irodori-migration"
documentation = "https://docs.rs/irodori-migration"
readme = "README.md"
keywords = ["database", "migration", "schema", "diff", "export"]
categories = ["database"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "docs/**/*.md",
    "examples/**/*.rs",
    "scripts/**/*.sh",
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/snapshots/**/*.snap",
]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
arrow = { version = "59.0.0", optional = true }
parquet = { version = "59.0.0", optional = true }
apache-avro = { version = "0.21", optional = true }
tracing = "0.1.44"

[dev-dependencies]
insta = "1.48.0"
mysql = { version = "28.0.0", default-features = false, features = ["minimal-rust"] }
postgres = "0.19.14"
testcontainers-modules = { version = "0.15.0", features = ["blocking", "mysql", "postgres"] }

[features]
default = []
parquet = ["dep:parquet", "dep:arrow"]
avro = ["dep:apache-avro"]

[package.metadata.docs.rs]
all-features = true
